# advent-of-code-2024

./: Cargo.toml  Makefile  README.md  lala.txt
input/: d16-minimal-3.txt  d16-minimal-4.txt  d17-example-4.txt
src/common/: mod.rs
