[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log2 = "0.1.14"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
confy = { version = "0.5", features = ["yaml_conf"], default-features = false }
git2 = "0.18.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
libc = "0.2.155"
